QA-1948 fixed gc jvm options